manifests/janssen-all-in-one-1.1.3-dev.tgz-manifest.yaml
---
# Source: janssen-all-in-one/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: http-aio
  namespace: default
  labels:
    app: my-release-janssen-all-in-one-aio
    app: my-release-janssen-all-in-one-aio
    helm.sh/chart: janssen-all-in-one-1.1.3-dev
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.1.3-dev"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
  - port: 8080
    name: http-aio
  selector:
    app: my-release-janssen-all-in-one-aio
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
---
# Source: janssen-all-in-one/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-janssen-all-in-one
  namespace: default
  labels:
    APP_NAME: auth-server
    app: my-release-janssen-all-in-one-aio
    app: my-release-janssen-all-in-one-aio
    helm.sh/chart: janssen-all-in-one-1.1.3-dev
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.1.3-dev"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-release-janssen-all-in-one-aio
  template:
    metadata:
      labels:
        APP_NAME: auth-server
        app: my-release-janssen-all-in-one-aio
    spec:
      dnsPolicy: ""
      containers:
      - name: janssen-all-in-one
        imagePullPolicy: IfNotPresent
        image: ghcr.io/janssenproject/jans/all-in-one:1.1.3_dev
        securityContext:
          runAsUser: 1000
          runAsNonRoot: true
        command:
          - /bin/sh
          - -c
          - |
              python3 /scripts/tls_generator.py &
              /app/bin/entrypoint.sh
        ports:
        - name: http-aio
          containerPort: 8080
        
        lifecycle:
          {}
        volumeMounts:
        
        
        
          - mountPath: /opt/jans/configurator/db/generate.json
            name: janssen-all-in-one-mount-gen-file
            subPath: generate.json
          - mountPath: /scripts/tls_generator.py
            name: janssen-all-in-one-tls-script
            subPath: tls_generator.py
          - name: my-release-janssen-all-in-one-updatelbip
            mountPath: /scripts/updatelbip.py
            subPath: updatelbip.py
          - name: sql-pass
            mountPath: /etc/jans/conf/sql_password
            subPath: sql_password
        livenessProbe:
          exec:
            command:
            - python3
            - /app/jans_aio/jans_auth/healthcheck.py
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - python3
            - /app/jans_aio/jans_auth/healthcheck.py
          initialDelaySeconds: 25
          periodSeconds: 25
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 16000m
            memory: 16000Mi
          requests:
            cpu: 2500m
            memory: 2500Mi
      hostAliases:
      - ip: 22.22.22.22
        hostnames:
        - demoexample.jans.io
      volumes:
      
      
      
        - name: janssen-all-in-one-mount-gen-file
          secret:
            secretName: my-release-janssen-all-in-one-gen-json-file
        - name: janssen-all-in-one-tls-script
          configMap:
            name: my-release-janssen-all-in-one-tls-script
        - name: my-release-janssen-all-in-one-updatelbip
          configMap:
            name: my-release-updatelbip
        - name: sql-pass
          secret:
            secretName: my-release-sql-pass
---
# Source: janssen-all-in-one/templates/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-janssen-all-in-one-openid-config
  labels:
    app: my-release-janssen-all-in-one-openid-config
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /jans-auth/.well-known/openid-configuration
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.jans.io"
      secretName: tls-certificate
  rules:
    - host: "demoexample.jans.io"
      http:
        paths:
          - path: /.well-known/openid-configuration
            pathType: Exact
            backend:
              service:
                name: http-aio
                port:
                  number: 8080
---
# Source: janssen-all-in-one/templates/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-janssen-all-in-one-device-code
  labels:
    app: my-release-janssen-all-in-one-device-code
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /jans-auth/device_authorization.htm
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.jans.io"
      secretName: tls-certificate
  rules:
    - host: "demoexample.jans.io"
      http:
        paths:
          - path: /device-code
            pathType: Exact
            backend:
              service:
                name: http-aio
                port:
                  number: 8080
---
# Source: janssen-all-in-one/templates/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-janssen-all-in-one-firebase-messaging
  labels:
    app: my-release-janssen-all-in-one-firebase-messaging
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /jans-auth/firebase-messaging-sw.js
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.jans.io"
      secretName: tls-certificate
  rules:
    - host: "demoexample.jans.io"
      http:
        paths:
          - path: /firebase-messaging-sw.js
            pathType: Exact
            backend:
              service:
                name: http-aio
                port:
                  number: 8080
---
# Source: janssen-all-in-one/templates/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-janssen-all-in-one-uma2-config
  labels:
    app: my-release-janssen-all-in-one-uma2-config
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /jans-auth/restv1/uma2-configuration
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.jans.io"
      secretName: tls-certificate
  rules:
    - host: "demoexample.jans.io"
      http:
        paths:
          - path: /.well-known/uma2-configuration
            pathType: Exact
            backend:
              service:
                name: http-aio
                port:
                  number: 8080
---
# Source: janssen-all-in-one/templates/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-janssen-all-in-one-webfinger
  labels:
    app: my-release-janssen-all-in-one-webfinger
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /jans-auth/.well-known/webfinger
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.jans.io"
      secretName: tls-certificate
  rules:
    - host: "demoexample.jans.io"
      http:
        paths:
          - path: /.well-known/webfinger
            pathType: Exact
            backend:
              service:
                name: http-aio
                port:
                  number: 8080
---
# Source: janssen-all-in-one/templates/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-janssen-all-in-one-webdiscovery
  labels:
    app: my-release-janssen-all-in-one-webdiscovery
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /jans-auth/.well-known/simple-web-discovery
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.jans.io"
      secretName: tls-certificate
  rules:
    - host: "demoexample.jans.io"
      http:
        paths:
          - path: /.well-known/simple-web-discovery
            pathType: Exact
            backend:
              service:
                name: http-aio
                port:
                  number: 8080
---
# Source: janssen-all-in-one/templates/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-janssen-all-in-one-config-api
  labels:
    app: my-release-janssen-all-in-one-config-api
  annotations:
    nginx.org/ssl-services: "configapi"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout invalid_header http_500 http_502 http_503 http_504"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.jans.io"
      secretName: tls-certificate
  rules:
    - host: "demoexample.jans.io"
      http:
        paths:
          - path: /jans-config-api
            pathType: Prefix
            backend:
              service:
                name: http-aio
                port:
                  number: 8080
---
# Source: janssen-all-in-one/templates/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-janssen-all-in-one-u2f-config
  labels:
    app: my-release-janssen-all-in-one-u2f-config
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /jans-auth/restv1/fido-configuration
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.jans.io"
      secretName: tls-certificate
  rules:
    - host: "demoexample.jans.io"
      http:
        paths:
          - path: /.well-known/fido-configuration
            pathType: Exact
            backend:
              service:
                name: http-aio
                port:
                  number: 8080
---
# Source: janssen-all-in-one/templates/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-janssen-all-in-one-auth-server
  labels:
    app: my-release-janssen-all-in-one-auth-server
  annotations:
    nginx.org/ssl-services: "auth-server"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout invalid_header http_500 http_502 http_503 http_504"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.jans.io"
      secretName: tls-certificate
  rules:
    - host: "demoexample.jans.io"
      http:
        paths:
          - path: /jans-auth
            pathType: Prefix
            backend:
              service:
                name: http-aio
                port:
                  number: 8080
---
# Source: janssen-all-in-one/templates/nginx-ingress.yaml
---
---
# Source: janssen-all-in-one/templates/nginx-ingress.yaml
---
---
# Source: janssen-all-in-one/templates/nginx-ingress.yaml
---
